# RoombaController

./: .gitignore  .gitmodules  CMakeLists.txt  COLDMAKE.txt  Doxyfile  README.md  build.zig  build.zig.zon  connectAndStart.sh  flake.nix  imgui.ini  main.cpp  rerun.sh  setup-env.sh  simple-sensor-mock-Cybot-Socket-server.py  tasks.txt  workspace.vim
docs/docbook/: Field_8cpp.xml  Field_8cpp_source.xml  Field_8hpp.xml  Field_8hpp_source.xml  Graph_8cpp.xml  Graph_8cpp_source.xml  Graph_8hpp.xml  Graph_8hpp_source.xml  HoleManager_8cpp.xml  HoleManager_8cpp_source.xml  HoleManager_8hpp.xml  HoleManager_8hpp_source.xml  Hole_8cpp.xml  Hole_8cpp_source.xml  Hole_8hpp.xml  Hole_8hpp_source.xml  Node_8cpp.xml  Node_8cpp_source.xml  Node_8hpp.xml  Node_8hpp_source.xml  Pillar_8cpp.xml  Pillar_8cpp_source.xml  Pillar_8hpp.xml  Pillar_8hpp_source.xml  Pose2D_8cpp.xml  Pose2D_8cpp_source.xml  Pose2D_8hpp.xml  Pose2D_8hpp_source.xml  annotated.xml  classField.xml  classGraph.xml  classHole.xml  classHoleManager.xml  classNode.xml  classPillar.xml  classPose2D.xml  dir_68267d1309a1af8e8297ef4c3efbcdba.xml  index.xml  main_8cpp.xml  main_8cpp_source.xml  (+7 more)
docs/html/: Field_8cpp.html  Field_8cpp_source.html  Field_8hpp.html  Field_8hpp.js  Field_8hpp_source.html  Graph_8cpp.html  Graph_8cpp_source.html  Graph_8hpp.html  Graph_8hpp.js  Graph_8hpp_source.html  HoleManager_8cpp.html  HoleManager_8cpp_source.html  HoleManager_8hpp.html  HoleManager_8hpp.js  HoleManager_8hpp_source.html  Hole_8cpp.html  Hole_8cpp.js  Hole_8cpp_source.html  Hole_8hpp.html  Hole_8hpp.js  Hole_8hpp_source.html  Node_8cpp.html  Node_8cpp_source.html  Node_8hpp.html  Node_8hpp.js  Node_8hpp_source.html  Pillar_8cpp.html  Pillar_8cpp_source.html  Pillar_8hpp.html  Pillar_8hpp.js  Pillar_8hpp_source.html  Pose2D_8cpp.html  Pose2D_8cpp.js  Pose2D_8cpp_source.html  Pose2D_8hpp.html  Pose2D_8hpp.js  Pose2D_8hpp_source.html  annotated.html  annotated_dup.js  classField-members.html  (+59 more)
docs/latex/: Field_8cpp.tex  Field_8cpp_source.tex  Field_8hpp.tex  Field_8hpp_source.tex  Graph_8cpp.tex  Graph_8cpp_source.tex  Graph_8hpp.tex  Graph_8hpp_source.tex  HoleManager_8cpp.tex  HoleManager_8cpp_source.tex  HoleManager_8hpp.tex  HoleManager_8hpp_source.tex  Hole_8cpp.tex  Hole_8cpp_source.tex  Hole_8hpp.tex  Hole_8hpp_source.tex  Node_8cpp.tex  Node_8cpp_source.tex  Node_8hpp.tex  Node_8hpp_source.tex  Pillar_8cpp.tex  Pillar_8cpp_source.tex  Pillar_8hpp.tex  Pillar_8hpp_source.tex  Pose2D_8cpp.tex  Pose2D_8cpp_source.tex  Pose2D_8hpp.tex  Pose2D_8hpp_source.tex  annotated.tex  classField.tex  classGraph.tex  classHole.tex  classHoleManager.tex  classNode.tex  classPillar.tex  classPose2D.tex  dir_68267d1309a1af8e8297ef4c3efbcdba.tex  files.tex  main_8cpp.tex  main_8cpp_source.tex  (+8 more)
docs/rtf/: dir_68267d1309a1af8e8297ef4c3efbcdba.rtf  refman.rtf
docs/xml/: Doxyfile.xml  Field_8cpp.xml  Field_8hpp.xml  Graph_8cpp.xml  Graph_8hpp.xml  (+25 more)
src/: CMakeLists.txt  Field.cpp  Field.h  Field.hpp  Graph.cpp  Graph.h  Graph.hpp  Hole.cpp  Hole.hpp  HoleManager.cpp  HoleManager.hpp  HoleManager_BACKUP_34046.cpp  Node.cpp  Node.h  Node.hpp  Pillar.cpp  Pillar.h  Pillar.hpp  Pose2D.cpp  Pose2D.h  Pose2D.hpp  SlopeIntercept.cpp  SlopeIntercept.hpp  graph.zig  main.cpp  main.zig  util.c  util.cpp  util.h  util.hpp
tests/: CMakeLists.txt  HoleTest.cpp  runTests
(+104 files in other folders)
